logs/validate.20260331-221522.log
error[E0425]: cannot find value `filtered` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:1521:73
     |
1521 |                         assert(empty_result =~= Seq::new(0nat, |i: int| filtered.spec_index(i)));
     |                                                                         ^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 24260MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
